--- a/index.html
+++ b/index.html
@@ -13,15 +13,7 @@
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyBTgQuVtNGV_FDMtXz6qP0RicKQH7wYZFA",
-    authDomain: "project39-496f3.firebaseapp.com",
-    databaseURL: "https://project39-496f3.firebaseio.com",
-    projectId: "project39-496f3",
-    storageBucket: "project39-496f3.appspot.com",
-    messagingSenderId: "718256636608",
-    appId: "1:718256636608:web:83e40764d2476c98966325"
-  };
+ //urs
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
